--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   ],
   "dependencies": {
     "axios": "^0.27.2",
+    "firebase": "^9.10.0",
     "jquery": "^3.6.1",
     "query-string": "^7.1.1",
     "socket.io-client": "^4.5.2"
