--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
-  "permissions": ["scripting", "proxy", "tts", "ttsEngine", "tabs", "webRequest", "webNavigation", "identity"],
+  "permissions": ["scripting", "proxy", "tts", "ttsEngine", "tabs", "webRequest", "webNavigation", "identity", "storage", "activeTab"],
   "host_permissions": ["http://*/*", "https://*/*", "<all_urls>"],
   "oauth2": {
     "client_id": "414125495010-d6t3jc7j3b9f33f56iqc526jpo8v5412.apps.googleusercontent.com",
