--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "firebase": "^9.10.0",
     "jquery": "^3.6.1",
     "query-string": "^7.1.1",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "uuid": "^9.0.0"
   }
 }
