--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chrome Extension Webpack Template",
+  "name": "Shareplay",
   "manifest_version": 3,
   "action": {
     "default_popup": "popup.html",
